Updated JS client and merged basic client integrations
